--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 executors:
   terraform:
     docker:
-      - image: hashicorp/terraform:0.12.28
+      - image: hashicorp/terraform:latest
         entrypoint: ""
         environment:
           TF_IN_AUTOMATION: 1
