Add ansible configuration for nlisim worker

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -4,3 +4,6 @@ all:
     girder:
       ansible_host: data.nutritionallungimmunity.org
       ansible_user: ubuntu
+    worker:
+      ansible_host: worker.nutritionallungimmunity.org
+      ansible_user: ubuntu
