Persist generated lockfile from terraform plan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
           root: terraform
           paths:
             - .terraform
+            - .terraform.lock.hcl
             - tfplan
 
   tf-apply:
