Set the correct variable for worker virtualenv

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -58,5 +58,5 @@
   roles:
     - role: nlisim_worker
       vars:
-        virtualenv: nli
+        worker_virtualenv: nli
         celery_broker_url: "sqs://"  # keys determined from instance metadata
