--- a/ansible/roles/nlisim_worker/tasks/main.yml
+++ b/ansible/roles/nlisim_worker/tasks/main.yml
@@ -7,6 +7,7 @@
       - python3-venv
       - python3-setuptools
       - python3-dev
+      - python3-pip
       - build-essential
     force_apt_get: true
   become: true
