--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -59,5 +59,5 @@
   roles:
     - role: nlisim_worker
       vars:
-        worker_virtualenv: nli
+        worker_virtualenv: "/home/{{ ansible_user_id }}/nli"
         celery_broker_url: "sqs://"  # keys determined from instance metadata
